title spelling fixed

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Oswald|Roboto+Condensed" rel="stylesheet">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>    
-    <title>Star Quizes</title>
+    <title>StarQuiz</title>
   </head>
   <body>
     <noscript>
