--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <meta property="og:title" content="StarQuiz">
+    <meta property="og:description" content="An application for testing your knowledge of the Solar System!">
+    <meta name="twitter:title" content="StarQuiz">
+    <meta name="twitter:description" content="An application for testing your knowledge of the Solar System!">
+    <meta name="twitter:image" content="http://res.cloudinary.com/dkksqcvlg/image/upload/v1519776729/starquiz_s1p9xo.png">
+    <meta name="twitter:card" content="summary_large_image">
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
