more social tags

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    
     <meta property="og:title" content="StarQuiz">
     <meta property="og:description" content="An application for testing your knowledge of the Solar System!">
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://starquiz.netlify.com/" />
+    <meta property="og:image" content="http://res.cloudinary.com/dkksqcvlg/image/upload/v1519776729/starquiz_s1p9xo.png" />
+    
     <meta name="twitter:title" content="StarQuiz">
     <meta name="twitter:description" content="An application for testing your knowledge of the Solar System!">
     <meta name="twitter:image" content="http://res.cloudinary.com/dkksqcvlg/image/upload/v1519776729/starquiz_s1p9xo.png">
