--- a/public/index.html
+++ b/public/index.html
@@ -18,13 +18,8 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Oswald|Roboto+Condensed" rel="stylesheet">
-    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>    
-    <title>StarQuiz</title>
-  </head>
-  <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
+    <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto+Condensed|Roboto:900" rel="stylesheet">
+    You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
   </body>
