--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,8 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto+Condensed|Roboto:900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Damion|Oswald|Roboto+Condensed|Roboto:900" rel="stylesheet">   
+   
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>    
     <title>StarQuiz</title>
   </head>
